# lazygit

./: .gitignore  .pylintrc  README.md  lazy_push_handler.py  publish_pr.sh  pyproject.toml
lazygit/: exceptions.py  handlers.py  main.py
lazygit/modules/: __init__.py  abstract.py  github.py  gitlab.py
