[tool.poetry]
name = "lazygit"
version = "0.1.0"
description = ""
authors = ["Sol-Raksha Raja <raj@cambridgespark.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pyperclip = "^1.8.2"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.2.2"
pylint = "^2.17.2"
mypy = "^1.2.0"


[tool.poetry.group.test.dependencies]
bandit = "^1.7.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
